--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @media screen and (max-width: 600px) {
-
+    
     :root{
         --marrom-escuro: #b36b0d;
         --marrom-medio: #ffa126;
@@ -13,26 +13,51 @@
         --fonte-paragrafo: Arial, Helvetica, sans-serif;
         --fonte-destaque: Verdana, Geneva, Tahoma, sans-serif;
     }
+.hidden-element{
+    display: none;
+}
+
+.caixa-de-apresentacao{
+    display: inline-block;
+    width: 60vh;
+    height: 80vh;
+    text-decoration: none;
+    list-style: none;
+    text-align: center;
+    background-color: var(--marrom-claro);
+
+    padding: 5px;
+
+    border: 1px;
+    border-style: solid;
+    border-radius: 3%;
+
+    margin: 3px 2px;
+
+
+}
+
+
+.caixa-de-destaque{
+    display: flexbox;
+    width: 50vh;
+    text-decoration: none;
+    list-style: none;
+    text-align: center;
+    background-color: var(--marrom-claro);
+
+    padding: 5px;
+
+    border: 1px;
+    border-style: solid;
+    border-radius: 3%;
+
+    margin: 3px 2px;
+
+
+}
 
 
 
-    #ajempi1{
-        padding-bottom: 0px;
-        border-bottom: 0;
-        margin-bottom: 1px;
-    
-    }
-    
-    #ajempi2{
-        padding-top: 0;
-        border-top: 0;
-        margin-top: 0;
-    }
 
-    nav>a{
-        text-decoration: none;
-        padding: 10px;
-        border: 5px;
-        margin: 5px;
-    }
 }
